# embedding-service-py

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.env  docker-compose.yml  output.json  output.sh  pyproject.toml
app/: main.py
app/api/: api.py  embeddings.py  embeddings_models.py  stores.py
app/core/: config.py  database.py
app/models/: embedding.py  embeddings_model.py  store.py
app/services/: embeddings.py  embeddings_model.py  store.py
input/: books.csv
script/: embed_csv.py
